@@ -1,3 +1,11 @@
+2002-05-28  Jan Nieuwenhuizen  <janneke@gnu.org>
+
+	* config.hh.in: Remove duplicate DIR_DATADIR entry.
+
+	* aclocal.m4: Regenerate.
+	
+	* stepmake/aclocal.m4: Append $FULLVERSION to datadir.
+
 2002-05-25  Heikki Junes  <heikki.junes@hut.fi>
 
 	* lilypond-mode.el: Write notes with fewer keystrokes trough a 
@@ -16,7 +24,7 @@
 
 2002-05-24  Jan Nieuwenhuizen  <janneke@gnu.org>
 
-d	* lily/text-item.cc (markup_text2molecule): Junk ugly lookahead by
+	* lily/text-item.cc (markup_text2molecule): Junk ugly lookahead by
 	using translate-robust add_molecule instead of add_at_edge.
 	Bugfix for #(lines (finger "" "1")).
 
